[project]
name = "cartpole"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Watson-Sei", email = "55475145+Watson-Sei@users.noreply.github.com" }
]
dependencies = [
    "gym>=0.26.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "pygame>=2.5.2",
    "gymnasium>=0.29.1",
    "box2d>=2.3.2",
    "box2d-py>=2.3.8",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "torchaudio>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cartpole"]

[project.scripts]
hello = "cartpole:hello"
train = "cartpole:train_start"
inference = "cartpole:inference_start"
